<resources>
    <string name="app_name">Quiz App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_textView">Welcome to Quiz App</string>

    <!-- Quiz Questions -->
    <string name="Q1">Q1. Which planet are we living in?</string>
    <string name="Q2">Q2. What is 0 + 1?</string>
    <string name="Q3">Q3. Which animal cries cat?</string>
    <string name="Q4">Q4. Where are you learning Android from?</string>
    <string name="Q5">Q5. A cat ran out from a house and brought her friend. How many cats are in the house?</string>
    <string name="Q6">Q6. Which company makes cell phones?</string>

    <!-- Quiz Answers -->
    <string name="Q1_A">Earth</string>

    <string name="Q2_Opt1">0 (Choose me)</string>
    <string name="Q2_Opt2">1 (This is not the answer)</string>
    <string name="Q2_Opt3">2 (Choose me)</string>

    <string name="Q3_Opt1">Meow!</string>
    <string name="Q3_Opt2">What!</string>
    <string name="Q3_Opt3">Meow!</string>

    <string name="Q4_A">Udacity</string>

    <string name="Q5_Opt1">1</string>
    <string name="Q5_Opt2">2</string>
    <string name="Q5_Opt3">3</string>

    <string name="Q6_Opt1">Toyota</string>
    <string name="Q6_Opt2">Samsung</string>
    <string name="Q6_Opt3">Apple</string>

</resources>
